backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nouhabk23/backend-image-final:1.0.0
        resources:
            requests:
              cpu: "0.5"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "500Mi"
        ports:
        - containerPort: 8080
        # readinessProbe:
        #     httpGet:
        #       path: /ready
        #       port: 80
        #     initialDelaySeconds: 5
        #     periodSeconds: 10
        # livenessProbe:
        #     httpGet:
        #       path: /healthz
        #       port: 80
        #     initialDelaySeconds: 10
        #     periodSeconds: 10
        # startupProbe:
        #     httpGet:
        #       path: /startup
        #       port: 80
        #     initialDelaySeconds: 20
        #     periodSeconds: 10
        #     failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30081
  type: NodePort
