ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: baknine
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: minikube.baknine.backend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
